# oaspec

./: README.md  pyproject.toml
oaspec/data/: oas-3.0.1.json
oaspec/schema/: __init__.py  exceptions.py  funcs.py  schema.py
oaspec/spec/: __init__.py  spec.py
tests/data/: petstore-3.0.1.json  petstore-3.0.1.yaml
tests/spec/: test_spec.py
