[tool.poetry]
name = "oaspec"
version = "0.2.0"
description = "A package of manipulating OpenAPI specifications in Python"
license = "MIT"
classifiers = ["Development Status :: 1 - Planning", "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", "Environment :: Console", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3 :: Only"]
homepage = "http://github.com/platformsh/oaspec"
authors = ["Platform.sh <sayhello@platform.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.*"
jsonschema = ">=4.23.0"
"ruamel.yaml" = ">=0.18.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[tool.setuptools.package-data]
"oaspec.data" = ["*.json"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
